// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button component render with correct button type when defined 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button" type="reset">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="reset">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should correctly render with custom text 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Click Me
</ic-button>
`;

exports[`button component should correctly render with text 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should disable tooltip when prop set 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" disable-tooltip="" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <button aria-label="Tooltip text" class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render a 'file' type input when fileUpload prop is enabled 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button" file-upload="">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
  <input accept="*" class="ic-input" hidden="" name="ic-button-file-upload-input-33" type="file">
</ic-button>
`;

exports[`button component should render correct HTML for destructive variant 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-destructive" exportparts="button" variant="destructive">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML for secondary variant 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-secondary" exportparts="button" variant="secondary">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML for tertiary variant 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-tertiary" exportparts="button" variant="tertiary">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - destructive 1`] = `
<ic-button class="ic-button-loading ic-button-size-medium ic-button-variant-destructive" exportparts="button" loading="" variant="destructive">
  <template shadowrootmode="open">
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" tabindex="0" type="button">
      <div class="loading-container">
        <ic-loading-indicator theme="inherit" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - secondary 1`] = `
<ic-button class="ic-button-loading ic-button-size-medium ic-button-variant-secondary" exportparts="button" loading="" variant="secondary">
  <template shadowrootmode="open">
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" tabindex="0" type="button">
      <div class="loading-container">
        <ic-loading-indicator theme="inherit" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - tertiary 1`] = `
<ic-button class="ic-button-loading ic-button-size-medium ic-button-variant-tertiary" exportparts="button" loading="" variant="tertiary">
  <template shadowrootmode="open">
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" tabindex="0" type="button">
      <div class="loading-container">
        <ic-loading-indicator theme="inherit" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading - theme light 1`] = `
<ic-button class="ic-button-loading ic-button-size-medium ic-button-variant-primary ic-theme-light" exportparts="button" loading="" theme="light">
  <template shadowrootmode="open">
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" tabindex="0" type="button">
      <div class="loading-container">
        <ic-loading-indicator theme="light" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when loading 1`] = `
<ic-button class="ic-button-loading ic-button-size-medium ic-button-variant-primary" exportparts="button" loading="">
  <template shadowrootmode="open">
    <button aria-disabled="true" aria-label="Loading" class="button" part="button" tabindex="0" type="button">
      <div class="loading-container">
        <ic-loading-indicator theme="inherit" type="linear"></ic-loading-indicator>
      </div>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should render correct HTML when using slotted content and slotted router item 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
  <template shadowrootmode="open">
    <slot name="router-item"></slot>
  </template>
  <a href="/" slot="router-item" style="gap: 0;">
    <div style="margin-right: var(--ic-space-xs);">
      <svg fill="#000000" height="24px" slot="left-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg" style="fill: currentcolor;">
        <path d="M0 0h24v24H0V0z" fill="none"></path>
        <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"></path>
      </svg>
      <ic-badge label="1" position="near" slot="badge"></ic-badge>
    </div>
    <ic-typography style="font-family: var(--ic-font-body-family); font-size: 0.875rem; font-weight: 600;">
      Slotted link
    </ic-typography>
  </a>
</ic-button>
`;

exports[`button component should render correct HTML with left icon 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <div class="icon-container">
        <slot name="left-icon"></slot>
      </div>
      <slot></slot>
    </button>
  </template>
  <svg fill="#000000" height="24px" slot="left-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"></path>
  </svg>
  Button
</ic-button>
`;

exports[`button component should render correct HTML with right icon 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button">
  <template shadowrootmode="open">
    <button class="button" part="button" tabindex="0" type="button">
      <slot></slot>
      <div class="icon-container right-icon">
        <slot name="right-icon"></slot>
      </div>
    </button>
  </template>
  <svg fill="#000000" height="24px" slot="right-icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"></path>
  </svg>
  Button
</ic-button>
`;

exports[`button component should render icon variant with a tooltip 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip class="ic-tooltip" id="ic-tooltip-ic-button-with-tooltip-test-button" target="ic-button-with-tooltip-test-button">
      <template shadowrootmode="open">
        <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
          <ic-typography variant="caption"></ic-typography>
          <div class="ic-tooltip-arrow"></div>
        </div>
        <slot></slot>
      </template>
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should render icon variant with a tooltip based on aria-label 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" tooltip-placement="top" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip class="ic-tooltip" target="ic-button-with-tooltip-test-button">
      <template shadowrootmode="open">
        <div aria-hidden="true" class="ic-tooltip-container" role="tooltip">
          <ic-typography variant="caption">
            Tooltip text
          </ic-typography>
          <div class="ic-tooltip-arrow"></div>
        </div>
        <slot></slot>
      </template>
      <button aria-label="Tooltip text" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should render icon variant with a tooltip based on title 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip class="ic-tooltip" id="ic-tooltip-ic-button-with-tooltip-test-button" target="ic-button-with-tooltip-test-button">
      <template shadowrootmode="open">
        <div aria-hidden="false" class="ic-tooltip-container" role="tooltip">
          <ic-typography variant="caption">
            Tooltip text
          </ic-typography>
          <div class="ic-tooltip-arrow"></div>
        </div>
        <slot></slot>
      </template>
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should render with "a" tag when href is passed 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" exportparts="button" href="#">
  <template shadowrootmode="open">
    <a class="button" href="#" part="button" tabindex="0">
      <slot></slot>
    </a>
  </template>
  Button
</ic-button>
`;

exports[`button component should render with defined "a" tag props 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary" download="" exportparts="button" href="#" rel="nofollow" target="_blank">
  <template shadowrootmode="open">
    <a class="button" download="" href="#" part="button" rel="nofollow" tabindex="0" target="_blank">
      <slot></slot>
    </a>
  </template>
  Button
</ic-button>
`;

exports[`button component should test aria-describedby is set 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary ic-theme-dark monochrome" exportparts="button" id="ic-button">
  <template shadowrootmode="open">
    <button aria-describedby="button-description" class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
    <span class="ic-button-describedby" id="button-description">
      This is the button description
    </span>
  </template>
  Button
</ic-button>
`;

exports[`button component should test aria-describedby is updated 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-primary ic-theme-dark monochrome" exportparts="button" id="ic-button">
  <template shadowrootmode="open">
    <button aria-describedby="button-description" class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
    <span class="ic-button-describedby" id="button-description">
      This is the new description
    </span>
  </template>
  Button
</ic-button>
`;

exports[`button component should test tooltip visibility changes when disable tooltip prop changes 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon ic-theme-dark monochrome" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip label="Tooltip text" placement="bottom" silent="" target="ic-button-with-tooltip-test-button">
      <button aria-label="Tooltip text" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should test tooltip visibility changes when disable tooltip prop changes 2`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon ic-theme-dark monochrome" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <button aria-label="Tooltip text" class="button" part="button" tabindex="0" type="button">
      <slot></slot>
    </button>
  </template>
  Button
</ic-button>
`;

exports[`button component should test tooltip visibility changes when disable tooltip prop changes 3`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon ic-theme-dark monochrome" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip label="Tooltip text" placement="bottom" silent="" target="ic-button-with-tooltip-test-button">
      <button aria-label="Tooltip text" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should update aria-expanded when attribute changed 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-test-button" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" aria-expanded="false" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should update aria-expanded when attribute changed 2`] = `
<ic-button aria-expanded="true" class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-test-button" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" aria-expanded="true" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should update aria-label when attribute changed 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip class="ic-tooltip" target="ic-button-with-tooltip-test-button">
      <template shadowrootmode="open">
        <div aria-hidden="true" class="ic-tooltip-container" role="tooltip">
          <ic-typography variant="caption">
            Tooltip text
          </ic-typography>
          <div class="ic-tooltip-arrow"></div>
        </div>
        <slot></slot>
      </template>
      <button aria-label="Tooltip text" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should update aria-label when attribute changed 2`] = `
<ic-button aria-label="New tooltip text" class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip class="ic-tooltip" target="ic-button-with-tooltip-test-button">
      <template shadowrootmode="open">
        <div aria-hidden="true" class="ic-tooltip-container" role="tooltip">
          <ic-typography variant="caption">
            New tooltip text
          </ic-typography>
          <div class="ic-tooltip-arrow"></div>
        </div>
        <slot></slot>
      </template>
      <button aria-label="New tooltip text" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should update tooltip label when title attribute changed 1`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-test-button" label="Tooltip text" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;

exports[`button component should update tooltip label when title attribute changed 2`] = `
<ic-button class="ic-button-size-medium ic-button-variant-icon" exportparts="button" id="test-button" title="New tooltip text" variant="icon">
  <template shadowrootmode="open">
    <ic-tooltip id="ic-tooltip-ic-button-with-tooltip-test-button" label="New tooltip text" placement="bottom" target="ic-button-with-tooltip-test-button">
      <button aria-describedby="ic-tooltip-ic-button-with-tooltip-test-button" class="button" part="button" tabindex="0" type="button">
        <slot></slot>
      </button>
    </ic-tooltip>
  </template>
  Button
</ic-button>
`;
